--- a/letterlyrics.html
+++ b/letterlyrics.html
@@ -33,7 +33,7 @@
 </head>
 <body>
   
-  <section data-bs-version="5.1" class="menu cid-tiEYxWrkvA" once="menu" id="menu1-16">
+  <section data-bs-version="5.1" class="menu cid-tiKiMdDUKO" once="menu" id="menu1-1s">
     
     <nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
         <div class="container-fluid">
@@ -54,9 +54,9 @@
                 </div>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link show text-black display-4" href="index.html" aria-expanded="false">THART - expressing theology in art</a></li></ul>
+                <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link show text-black text-primary display-4" href="index.html" aria-expanded="false">THART - expressing theology in art</a></li></ul>
                 
-                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-white display-4" href="index.html#features5-w"><span class="mobi-mbri mobi-mbri-home mbr-iconfont mbr-iconfont-btn"></span>HOME&nbsp;</a></div>
+                <div class="navbar-buttons mbr-section-btn"><a class="btn btn-white display-4" href="index.html#header11-1i"><span class="mobi-mbri mobi-mbri-home mbr-iconfont mbr-iconfont-btn"></span>HOME&nbsp;</a></div>
             </div>
         </div>
     </nav>
@@ -151,7 +151,7 @@
             </div>
         </div>
     </div>
-</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2878450" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Built with Mobirise &#8204;</p><a style="z-index:1" href="https://mobirise.com/website-design-software.html">Website Designing Software</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section class="display-7" style="padding: 0;align-items: center;justify-content: center;flex-wrap: wrap;    align-content: center;display: flex;position: relative;height: 4rem;"><a href="https://mobiri.se/2878450" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img alt="" style="height: 4rem;" src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a><p style="margin: 0;text-align: center;" class="display-7">Built with Mobirise &#8204;</p><a style="z-index:1" href="https://mobirise.com/offline-website-builder.html">Free Offline Web Page Maker</a></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/dropdown/js/navbar-dropdown.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
